<!DOCTYPE resources [<!ENTITY appname "Catch Up">]>

<resources>
    <string name="app_name">&appname;</string>
    <string name="contact_photo_description">%1$s\'s Photo</string>
    <string name="never">Never</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <plurals name="days_ago">
        <item quantity="one">%1$d day ago</item>
        <item quantity="other">%1$d days ago</item>
    </plurals>
    <plurals name="weeks_ago">
        <item quantity="one">%1$d week ago</item>
        <item quantity="other">%1$d weeks ago</item>
    </plurals>
    <plurals name="months_ago">
        <item quantity="one">%1$d month ago</item>
        <item quantity="other">%1$d months ago</item>
    </plurals>
    <plurals name="years_ago">
        <item quantity="one">%1$d year ago</item>
        <item quantity="other">%1$d years ago</item>
    </plurals>
    <string name="add_contact">Add Contact</string>
    <string name="set_group">Set Contact Group</string>
    <string name="about">About &appname;</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="remove_contact">Remove from Catch Up</string>
    <string name="removed_contact">Removed %s</string>
    <string name="restored_contact">Restored %s</string>
    <string name="undo">Undo</string>
    <string name="edit_contact_method">Edit Contact Method</string>
    <string name="edit_last_contact">Change Last Contact Time</string>
    <string name="hello_blank_fragment">Hello?</string>
</resources>
