<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_person_add_white_24dp"
        android:orderInCategory="100"
        android:title="@string/add_contact"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_set_group"
        android:orderInCategory="100"
        android:title="@string/set_group"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
